CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(SELECT)

ADD_COMPILE_OPTIONS(-std=gnu++11)

SET(ROOT_PATH ${CMAKE_CURRENT_LIST_DIR})
SET(LIBRARY_OUTPUT_PATH ${ROOT_PATH}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${ROOT_PATH}/bin)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
#ADD_LIBRARY(select STATIC ${SRC_LIST})
ADD_EXECUTABLE(select ${SRC_LIST})
